--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 packages = [{include = "mirko"}]
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.11 || ^3.12"
 docker = "^7.0.0"
 pytest = "^8.1.1"
 pytest-approvaltests = "^0.2.4"
